# alinea-sdk-python

./: .gitignore  GITHUB_READY_CHECKLIST.md  GITHUB_SETUP_COMMANDS.md  INTEGRATION_GUIDE.md  INTEGRATION_SUCCESS.md  README.md  README_NEW.md  READY_FOR_GITHUB.md  env.example  pyproject.toml
alinea/: __init__.py  backend_integration.py  causality.py  client.py  coordinator.py  exceptions.py  memory.py  models.py  real_client.py  world_state.py
examples/: demo_with_mock_backend.py  llm_research_workflow.py  multi_agent_demo.py  quickstart.py  real_backend_demo.py  real_backend_test.py  real_multi_agent_system.py
scripts/: generate_new_api_key.py
